setup the app on heroku Maintains[#172636649]

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ markdown = "*"
 django-filter = "*"
 python-decouple = "*"
 psycopg2 = "*"
+django-cors-headers = "*"
+gunicorn = "*"
+requests = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.8"
