--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
 asgiref==3.2.7
 autopep8==1.5.2
+certifi==2020.4.5.1
+chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.0.6
+django-cors-headers==3.2.1
 django-filter==2.2.0
+django-heroku==0.3.1
+django-rest-registration==0.5.6
 djangorestframework==3.11.0
+gunicorn==20.0.4
+idna==2.9
 Markdown==3.2.1
 psycopg2==2.8.5
 pycodestyle==2.5.0
 python-decouple==3.3
 pytz==2020.1
+requests==2.23.0
 sqlparse==0.3.1
+typing==3.7.4.1
+urllib3==1.25.9
+whitenoise==5.0.1
