--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,8 @@ sqlparse = "==0.3.1"
 django-rest-registration = "*"
 gunicorn = "*"
 django-heroku = "*"
+django-createsuperuser = "*"
+codecov = "*"
 
 [requires]
 python_version = "3.8"
