--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ djangorestframework==3.11.0
 gunicorn==20.0.4
 idna==2.9
 Markdown==3.2.1
+Pillow==7.1.2
 psycopg2==2.8.5
 pycodestyle==2.5.0
 python-decouple==3.3
