--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 install:
   - pip install -r requirements.txt
-  - pip -m install Pillow
+  - python -m pip install Pillow
   - pip install codecov
 
 before_script:
