--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,6 @@ verify_ssl = true
 autopep8 = "*"
 
 [packages]
-django = "==3.0.6"
 djangorestframework = "==3.11.0"
 markdown = "==3.2.1"
 django-filter = "==2.2.0"
@@ -18,11 +17,24 @@ autopep8 = "==1.5.2"
 pycodestyle = "==2.5.0"
 pytz = "==2020.1"
 sqlparse = "==0.3.1"
-django-rest-registration = "*"
-gunicorn = "*"
-django-heroku = "*"
-django-createsuperuser = "*"
+django-rest-registration = "==0.5.6"
+gunicorn = "==20.0.4"
+django-heroku = "==0.3.1"
+django-createsuperuser = "==2019.9.7"
 codecov = "*"
+certifi = "==2020.4.5.1"
+chardet = "==3.0.4"
+click = "==7.1.2"
+coverage = "==5.1"
+dj-database-url = "==0.5.0"
+django-cors-headers = "==3.2.1"
+idna = "==2.9"
+pillow = "==7.1.2"
+requests = "==2.23.0"
+typing = "==3.7.4.1"
+urllib3 = "==1.25.9"
+whitenoise = "==5.1.0"
+Django = "==3.0.6"
 
 [requires]
 python_version = "3.8"
