--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,9 @@ typing = "==3.7.4.1"
 urllib3 = "==1.25.9"
 whitenoise = "==5.1.0"
 Django = "==3.0.7"
+django-allauth = "*"
+django-rest-auth = "*"
+djangorestframework-jwt = "*"
 
 [requires]
 python_version = "3.8"
